* Added the support for texture bombing
* Added the support for Caustic AOV to OutputSwitcherPlugin
* LuxCore API has new log system
* Added the support for 180 (or any other amount of degrees) view to Environment camera
* Added the support for 180 (horizontal stacked) and 360 degree (vertical stacked) stereo camera (issue #451)

Beta1 released

### Fixed Bugs

* Added the support for pixel filtering to light tracing (issue #413)
* Now LuxCore works even if OpenCL is available but not a valid OpenCL ICD platform has been found (issue #422)
* Fixed a problem with cloth material when using CUDA and Windows (issue #417)
* Fixed a problem in glossy coating albedo evaluation on GPUs
* Fixed a difference between CPU and GPU rendering when using a roughglass with a shadow transparency color
* Fixed the support in .ply files for triangle AOVs
* Fixed a memory leak when rendering with OpenCL (noticeable when rendering animations)
* Fixed text export of brick texture HERRINGBONE and BASKET
* Fixed scale problem in GPU code for brick texture HERRINGBONE and BASKET (issue #438)
* Fixed a possible crash when using trilinear texture with GPUs
* Reworked some condition in hybrid rendering light tracing to solve the problem of flashing caustics (issue #441)
* Fixed a problem with Blender Translation language preference option and scene export on file
* Fixed a self-shadow problem in BIRCPU render engine
* Fixed a Mix material problem when using solid and transparent materials (issue #461)

Beta1 released

* Fixed a crash when using Subdivision shape with vertex colors (issue #469)
* Fixed a possible crash when using multiple GPUs with PhotonGI
* Fixed a deadlock when using multiple renders at the same time in Blender (issue #575)

Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
of release notes.

### Known Problems and limitations

* accelerator.bvh.builder.type = EMBREE_MORTON doesn't work with the latest Embree